deploy: ee9c72dc570b881f9295d7fc07844cf909adf035

--- a/publication/index.html
+++ b/publication/index.html
@@ -24,8 +24,8 @@ In <em>EPSR</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.epsr.2022.108566 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Haoruo Zhao</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Pascal Van Hentenryck</span></span>
 (2022).
-<a href=/publication/a-linear-outer-approximation-of-line-losses-for-dc-based-optimal-power-flow-problems/>A Linear Outer Approximation of Line Losses for DC-based Optimal Power Flow Problems</a>.
-EPSR.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/a-linear-outer-approximation-of-line-losses-for-dc-based-optimal-power-flow-problems/cite.bib>Cite</a>
+<a href=/publication/lloa/>A Linear Outer Approximation of Line Losses for DC-based Optimal Power Flow Problems</a>.
+EPSR.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/lloa/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.epsr.2022.108272 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Minas Chatzos</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Pascal Van Hentenryck</span></span>
 (2022).
