--- a/publication/index.html
+++ b/publication/index.html
@@ -11,12 +11,14 @@ Thesis</option></select></div><div class=col-auto><select class="pub-filters for
 2018</option></select></div></div><div id=container-publications><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Oliver Stover</span>, <span>Pranav Karve</span>, <span>Sankaran Mahadevan</span>, <span>Wenbo Chen</span>, <span>Haoruo Zhao</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Pascal Van Hentenryck</span></span>
 (2022).
-<a href=/publication/just-in-time-learning-for-operational-risk-assesment-in-power-grids/>Just-In-Time Learning for Operational Risk Assessment in Power Grids</a>.
-Submitted to <em>IEEE Transactions on Power Systems</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/just-in-time-learning-for-operational-risk-assesment-in-power-grids/cite.bib>Cite</a>
+<a href=/publication/jit-risk-learning/>Just-In-Time Learning for Operational Risk Assessment in Power Grids</a>.
+Submitted to <em>IEEE Transactions on Power Systems</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/jit-risk-learning/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.48550/ARXIV.2209.12762 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Michael Klamkin</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Terrence W. Mak</span>, <span>Pascal Van Hentenryck</span></span>
 (2022).
-<a href=/publication/active-bucketized-learning-for-acopf-optimization-proxies/>Active Bucketized Learning for ACOPF Optimization Proxies</a>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.48550/arXiv.2208.07497 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<a href=/publication/active-bucketized-learning/>Active Bucketized Learning for ACOPF Optimization Proxies</a>.
+Submitted to <em>AAAI 2023</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/active-bucketized-learning/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.48550/arXiv.2208.07497 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Wenbo Chen</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Pascal Van Hentenryck</span></span>
 (2022).
 <a href=/publication/example/>Learning Optimization Proxies for Large-Scale Security-Constrained Economic Dispatch</a>.
@@ -29,19 +31,19 @@ EPSR.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.epsr.2022.108272 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Minas Chatzos</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Pascal Van Hentenryck</span></span>
 (2022).
-<a href=/publication/data-driven-time-series-reconstruction-for-modern-power-systems-research/>Data-Driven Time Series Reconstruction for Modern Power Systems Research</a>.
+<a href=/publication/time-series-reconstruction/>Data-Driven Time Series Reconstruction for Modern Power Systems Research</a>.
 EPSR.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.epsr.2022.108589 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Andrea Lodi</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Juan-Pablo Vielma</span></span>
 (2022).
-<a href=/publication/disjunctive-cuts-for-mixed-integer-conic-optimization/>Disjunctive cuts for mixed-integer conic optimization</a>.
-Math. Prog. A.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/disjunctive-cuts-for-mixed-integer-conic-optimization/cite.bib>Cite</a>
+<a href=/publication/disjunctive-cuts-micp/>Disjunctive cuts for mixed-integer conic optimization</a>.
+Math. Prog. A.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/disjunctive-cuts-micp/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1007/s10107-022-01844-1 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Terrence W.K. Mak</span>, <span>Minas Chatzos</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Pascal Van Hentenryck</span></span>
 (2022).
-<a href=/publication/learning-regionally-decentralized-ac-optimal-power-flows-with-admm/>Learning Regionally Decentralized AC Optimal Power Flows with ADMM</a>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.48550/arXiv.2205.03787 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<a href=/publication/acopf-ml-admm/>Learning Regionally Decentralized AC Optimal Power Flows with ADMM</a>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.48550/arXiv.2205.03787 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span class=author-highlighted>Mathieu Tanneau</span>, <span>Miguel F. Anjos</span>, <span>Andrea Lodi</span></span>
 (2021).
-<a href=/publication/design-and-implementation-of-a-modular-interior-point-solver-for-linear-optimization/>Design and implementation of a modular interior-point solver for linear optimization</a>.
+<a href=/publication/tulip-design-implementation/>Design and implementation of a modular interior-point solver for linear optimization</a>.
 Math. Prog. Comp..<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1007/s12532-020-00200-8 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Defeng Liu</span>, <span>Andrea Lodi</span>, <span class=author-highlighted>Mathieu Tanneau</span></span>
 (2021).
@@ -49,11 +51,11 @@ Math. Prog. Comp..<p><a class="btn btn-outline-primary btn-page-header btn-sm" h
 JOGO.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1007/s10898-020-00973-1 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2020"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span class=author-highlighted>Mathieu Tanneau</span></span>
 (2020).
-<a href=/publication/exploiting-structure-in-mixed-integer-linear-and-nonlinear-programming/>Exploiting Structure in Mixed-Integer Linear and Nonlinear Programming</a>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/exploiting-structure-in-mixed-integer-linear-and-nonlinear-programming/cite.bib>Cite</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2018"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<a href=/publication/phd-thesis/>Exploiting Structure in Mixed-Integer Linear and Nonlinear Programming</a>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/phd-thesis/cite.bib>Cite</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2018"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Miguel Anjos</span>, <span>Andrea Lodi</span>, <span class=author-highlighted>Mathieu Tanneau</span></span>
 (2018).
-<a href=/publication/a-decentralized-framework-for-the-optimal-coordination-of-distributed-energy-resources/>A Decentralized Framework for the Optimal Coordination of Distributed Energy Resources</a>.
-IEEE TPS.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/a-decentralized-framework-for-the-optimal-coordination-of-distributed-energy-resources/cite.bib>Cite</a>
+<a href=/publication/der-dantzig-wolfe/>A Decentralized Framework for the Optimal Coordination of Distributed Energy Resources</a>.
+IEEE TPS.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/der-dantzig-wolfe/cite.bib>Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1109/TPWRS.2018.2867476 target=_blank rel=noopener>DOI</a></p></div></div></div></div></div></div></div><div class=page-footer><div class=container><footer class=site-footer><p class="powered-by copyright-license-text">© 2022 Me. This work is licensed under <a href=https://creativecommons.org/licenses/by-nc-nd/4.0 rel="noopener noreferrer" target=_blank>CC BY NC ND 4.0</a></p><p class="powered-by footer-license-icons"><a href=https://creativecommons.org/licenses/by-nc-nd/4.0 rel="noopener noreferrer" target=_blank aria-label="Creative Commons"><i class="fab fa-creative-commons fa-2x" aria-hidden=true></i>
 <i class="fab fa-creative-commons-by fa-2x" aria-hidden=true></i>
 <i class="fab fa-creative-commons-nc fa-2x" aria-hidden=true></i>
