deploy: 7e937955eed4c9304c21928f40f607a9e6eeb53e

--- a/publication/index.html
+++ b/publication/index.html
@@ -32,7 +32,8 @@ EPSR.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-
 <span class="article-metadata li-cite-author"><span>Minas Chatzos</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Pascal Van Hentenryck</span></span>
 (2022).
 <a href=/publication/time-series-reconstruction/>Data-Driven Time Series Reconstruction for Modern Power Systems Research</a>.
-EPSR.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.epsr.2022.108589 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+EPSR.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/time-series-reconstruction/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.epsr.2022.108589 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Andrea Lodi</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Juan-Pablo Vielma</span></span>
 (2022).
 <a href=/publication/disjunctive-cuts-micp/>Disjunctive cuts for mixed-integer conic optimization</a>.
@@ -40,15 +41,19 @@ Math. Prog. A.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1007/s10107-022-01844-1 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2022"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Terrence W.K. Mak</span>, <span>Minas Chatzos</span>, <span class=author-highlighted>Mathieu Tanneau</span>, <span>Pascal Van Hentenryck</span></span>
 (2022).
-<a href=/publication/acopf-ml-admm/>Learning Regionally Decentralized AC Optimal Power Flows with ADMM</a>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.48550/arXiv.2205.03787 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<a href=/publication/acopf-ml-admm/>Learning Regionally Decentralized AC Optimal Power Flows with ADMM</a>.
+Under revisions at <em>IEEE Transactions on Smart Grids</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/acopf-ml-admm/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.48550/arXiv.2205.03787 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span class=author-highlighted>Mathieu Tanneau</span>, <span>Miguel F. Anjos</span>, <span>Andrea Lodi</span></span>
 (2021).
 <a href=/publication/tulip-design-implementation/>Design and implementation of a modular interior-point solver for linear optimization</a>.
-Math. Prog. Comp..<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1007/s12532-020-00200-8 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<em>Math. Prog. Comp.</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/tulip-design-implementation/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1007/s12532-020-00200-8 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Defeng Liu</span>, <span>Andrea Lodi</span>, <span class=author-highlighted>Mathieu Tanneau</span></span>
 (2021).
 <a href=/publication/learning-chordal-extensions/>Learning chordal extensions</a>.
-JOGO.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1007/s10898-020-00973-1 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2020"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+JOGO.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/learning-chordal-extensions/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1007/s10898-020-00973-1 target=_blank rel=noopener>DOI</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2020"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span class=author-highlighted>Mathieu Tanneau</span></span>
 (2020).
 <a href=/publication/phd-thesis/>Exploiting Structure in Mixed-Integer Linear and Nonlinear Programming</a>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/phd-thesis/cite.bib>Cite</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2018"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
